fix navigation and minor layout issue

--- a/src/components/tab/tab-content.module.css
+++ b/src/components/tab/tab-content.module.css
@@ -1,4 +1,5 @@
 .TabContent {
+    min-width: 70%;
     max-width: 100%;
     padding: 5vmin;
     overflow-x: hidden;
